syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package PnP.Scanning.Core.Services;

// Language guide: https://developers.google.com/protocol-buffers/docs/proto3

service PnPScanner {
	rpc Status (StatusRequest) returns (StatusReply);
	rpc Start (StartRequest) returns (stream StartStatus);
	rpc Stop (StopRequest) returns (google.protobuf.Empty);
	rpc Ping (google.protobuf.Empty) returns (PingReply);
	rpc List (ListRequest) returns (ListReply);
	rpc Pause (PauseRequest) returns (stream PauseStatus);
	rpc Restart (RestartRequest) returns (stream RestartStatus);
	rpc Report (ReportRequest) returns (stream ReportStatus);
}

// Status
message StatusRequest {
	string Message = 1;
}

message StatusReply {
	repeated ScanStatusReply Status = 1;
}

message ScanStatusReply {
	string Id = 1;
	string Mode = 2;
	string Status = 3;
	int32 SiteCollectionsToScan = 4;
	int32 SiteCollectionsScanned = 5;
	google.protobuf.Duration Duration = 6;
	google.protobuf.Timestamp Started = 7;
	int32 RequestsThrottled = 8;
	int32 RequestsRetriedDueToNetworkError = 9;
	google.protobuf.Timestamp RetryingRequestAt = 10;
}

// Start
message StartRequest {
	string Mode = 1;
	string Tenant = 2;
	string Environment = 3;
	string SitesList = 4;
	string SitesFile = 5;
	string AuthMode = 6;
	string ApplicationId = 7;
	string TenantId = 8;
	string CertPath = 9;
	string CertFile = 10;
	string CertPassword = 11;
	int32 Threads = 12;
	repeated PropertyRequest Properties = 13;
	string AdminCenterUrl = 14;
	string MySiteHostUrl = 15;	
}

message PropertyRequest {
	string Property = 1;
	string Type = 2;
	string Value = 3;
}

message StartStatus {
	string Status = 1;
	string Type = 2;
}

// Stop
message StopRequest {
	string Site = 1;
}

// Ping
message PingReply {
	bool UpAndRunning = 1;
	int32 ProcessId = 2;
}

// List
message ListRequest {
	bool Running = 1;
	bool Paused = 2;
	bool Finished = 3;
	bool Terminated = 4;
}

message ListReply {
	repeated ListScanResponse Status = 1;
}

message ListScanResponse {
	string Id = 1;
	string Mode = 2;
	string Status = 3;
	int32 SiteCollectionsToScan = 4;
	int32 SiteCollectionsScanned = 5;
	google.protobuf.Timestamp ScanStarted = 6;
	google.protobuf.Timestamp ScanEnded = 7;
}

// Pause
message PauseRequest {
	string Id = 1;
	bool All = 2;
}

message PauseStatus {
	string Status = 1;
	string Type = 2;
}

// Restart
message RestartRequest {
	string Id = 1;
	int32 Threads = 2;
}

message RestartStatus {
	string Status = 1;
	string Type = 2;
}

// Report
message ReportRequest {
	string Id = 1;
	string Mode = 2;
	string Path = 3;
	string Delimiter = 4;
}

message ReportStatus {
	string Status = 1;
	string Type = 2;
	string ReportPath = 3;
}